# Dead-Sea-Scrolls

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sort.sh  t3augmentdata.py  t3pickle.py  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-quality.yml
data/: .gitignore
data/annotated/: annotated.txt  annotated_encoded.txt  eval.ipynb
data/model/: augmented_cnn_encoder.pkl
data/model/augmented_cnn/: classification_report.txt  keras_metadata.pb  saved_model.pb
data/model/augmented_cnn/variables/: variables.data-00000-of-00001  variables.index
src/: CharacterSegmentation.py  Segmentation.py  classification.ipynb  data_augmentation.ipynb  data_augmentation.py  hello.py  lineSegmentation.py  thinning.py  x.py
src/augmentation/: augment.py
src/classification/: classification.ipynb  classifier.py
src/segmentation/: character.py  line.py
src/utils/: cache.py  font.py  images.py  logger.py  paths.py  zip.py
