[tool.poetry]
name = "dead-sea-scrolls"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
scipy = "^1.8.0"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
python-dotenv = "^0.20.0"
tqdm = "^4.64.0"
joblib = "^1.1.0"
pandas = "^1.4.2"
sklearn = "^0.0"
tensorflow = "^2.9.0"
imblearn = "^0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.mypy]
disallow_untyped_defs=true
disallow_incomplete_defs=true
no_implicit_optional=true
namespace_packages=true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
