[tool.poetry]
name = "dead-sea-scrolls"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
click = "^8.1.3"
scipy = "^1.8.0"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
python-dotenv = "^0.20.0"
tqdm = "^4.64.0"
joblib = "^1.1.0"
Pillow = "^9.1.0"
opencv-python = "^4.5.5"
scikit-image = "^0.19.2"
imutils = "^0.5.4"
tensorflow = "^2.9.1"
jupyterlab = "^3.4.2"
python-Levenshtein = "^0.12.2"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
types-Pillow = "^9.0.15"
snakeviz = "^2.1.1"
ipykernel = "^6.13.0"

[tool.mypy]
disallow_untyped_defs=true
disallow_incomplete_defs=true
no_implicit_optional=true
namespace_packages=true
plugins="numpy.typing.mypy_plugin"
exclude="cache/"

[[tool.mypy.overrides]]
module = [
    "joblib",
    "scipy",
    "tqdm.contrib.concurrent",
    "cv2",
    "skimage.*",
    "imutils",
    "matplotlib",
    "sklearn.*",
    "pandas",
    "tensorflow" 
]
ignore_missing_imports=true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
